components/main_layout/stylesheets/body.styl
//
// Styles that affect the layout at large such as when the header becomes fixed
// or when a featured banner/view in room changes the content to fit underneath
// a transparent header.
//

@require '../../stylus_lib'
@require '../../eggs/invert'
@require '../../eggs/bounce'

search-bar-input-placeholder-white()
  color white

// When you arrive at a page logged out there is a welcome header, then you
// scroll down and the header becomes fixed. This is the fixed header.
.body-header-fixed
  #main-layout-welcome-header
    display none
  #main-layout-container
    margin-top (main-header-height + content-margin-top)
  #main-layout-header
    position fixed
    z-index zindex-primary-nav
    // Prevent repaints
    force-hardware-acceleration()
    &.force-position-absolute
      position absolute

html[data-useragent*="iPad"]
  .body-header-fixed #main-layout-header
    position absolute

// Pages like checkout or onboarding remove options from the header to heavily
// focus on the task at hand.
.minimal-header
  #main-layout-header
    position relative !important
  #main-layout-search-bar-container
  #main-layout-header-center
  .main-layout-header-user
    display none
  #main-layout-header-home-logo
    border-right 1px solid gray-lighter-color

// Simply hides the header
.body-no-header
  #main-layout-header
    display none
  #main-layout-container
    margin-top 0 !important

// same as fixed header but with no annoying 10px extra margin
.body-header-fixed-no-margin
  @extend .body-header-fixed
  #main-layout-container
    margin-top main-header-height !important

// View in room and home page hero units will sit underneath a transparent
// header.
@media(min-width: nav-bar-break)
  .body-transparent-header-white
  .body-transparent-header
    #main-layout-header
      background transparent

.body-transparent-header
  #main-layout-header
    border-color rgba(black, 0.1)
    *:not(.tt-suggestion):not(.tt-dropdown-menu):not(.hover-pulldown-menu *)
      border-color rgba(black, 0.1)
    #main-layout-search-bar-container
      border-color black
.body-hide-header
  #main-layout-header
    display none

// Dark banners and backgrounds need the header it to be white text and outlines
// for visiblity.
@media(min-width: nav-bar-break)
  .body-transparent-header-white
    #main-layout-header-center a, .main-layout-header-user a, .mlh-user-name, #main-layout-header-home-logo
    #main-layout-welcome-header, #main-layout-search-bar-icon, #main-layout-search-bar-input
      color white
    #main-layout-search-bar-input
      placeholder(search-bar-input-placeholder-white)
    #main-layout-header
      border-color rgba(white, 0.3)
      *:not(.tt-suggestion):not(.tt-dropdown-menu)
        border-color rgba(white, 0.3)
      #main-layout-search-bar-container
        border-color white
    #main-layout-search-bar-container.is-loading .loading-spinner-small
      background white
    #main-layout-header-home-logo::after
      border-color white

// A page that infinite scrolls will hide the footer
.body-infinite-scroll
  #main-layout-footer
    display none

// Hides header and footer, and some margin adjustments for the iPad app
.body-eigen
  #main-layout-footer, #main-layout-header
    display none !important
  #main-layout-container
    margin-top 0 !important
    padding 0
    @media(min-device-width: 768px)
      padding 0 layout-side-margin

// Loosens up some styling like min-widths so the page can be responsive
.body-responsive
  min-width inherit
  #main-layout-container
    margin 30px 20px

// Some elements need to break out of the standard side and top margins to fill
// the full viewport. (Removes all side margins and content-margin-top)
.body-no-margins
  #main-layout-container
    margin-top (welcome-header-height + main-header-height)
    margin-left 0
    margin-right 0
  &.body-header-fixed
    #main-layout-container
      margin-top main-header-height

.body-no-padding
  #main-layout-container
    padding 0

